k8s/namespaces/staging1/sqctrl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sqctrl
  name: sqctrl
  namespace: staging1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqctrl
  template:
    metadata:
      labels:
        app: sqctrl
    spec:
      containers:
      - env:
        - name: CATALINA_OPTS
          value: -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9010
            -Dcom.sun.management.jmxremote.rmi.port=9010 -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.authenticate=false -Djava.rmi.server.hostname=$hostAddr
            -Dcom.sun.management.jmxremote.local.only=false -Xdebug -Xrunjdwp:transport=dt_socket,address=*:8000,server=y,suspend=n
        - name: JAVA_OPTS
          value: -Djavax.net.ssl.trustStore=/opt/certs/sqfaas.jks -Djavax.net.ssl.trustStorePassword=demosys
            -Dlogback.configurationFile=/usr/local/sqctrl/config/logback.xml
        image: sinqiainterno.azurecr.io/fundos/sqctrl/controladoriacustodia:9.68af
        imagePullPolicy: Always
        name: sqctrl
        ports:
        - containerPort: 8080
        - containerPort: 8443
        - containerPort: 9010
        - containerPort: 9090
        - containerPort: 8000
        volumeMounts:
        - mountPath: /opt/certs
          name: truststore
          readOnly: true
        - name: sqctrl-config
          mountPath: /sqctrl/drive/config
        - name: sqctrl-data
          mountPath: /sqctrl/drive/data
        - name: sqctrl-exports
          mountPath: /sqctrl/drive/exports
        - name: sqctrl-filesportal
          mountPath: /sqctrl/drive/filesportal
        - name: sqctrl-imports
          mountPath: /sqctrl/drive/imports
        - name: sqctrl-shared
          mountPath: /sqctrl/drive/shared
        - name: sqctrl-upload
          mountPath: /sqctrl/drive/upload
      hostAliases:
      - hostnames:
        - kc.staging1.sqfaas.in
        - bff.staging1.sqfaas.in
        - staging1.sqfaas.in
        ip: 10.140.133.172
      imagePullSecrets:
      - name: acr-secret
      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: truststore
        secret:
          secretName: secrets-files
      volumes:
        - name: sqctrl-config
          persistentVolumeClaim:
            claimName: sqctrl-pvc-config
        - name: sqctrl-data
          persistentVolumeClaim:
            claimName: sqctrl-pvc-data
        - name: sqctrl-exports
          persistentVolumeClaim:
            claimName: sqctrl-pvc-exports
        - name: sqctrl-filesportal
          persistentVolumeClaim:
            claimName: sqctrl-pvc-filesportal
        - name: sqctrl-imports
          persistentVolumeClaim:
            claimName: sqctrl-pvc-imports
        - name: sqctrl-shared
          persistentVolumeClaim:
            claimName: sqctrl-pvc-shared
        - name: sqctrl-upload
          persistentVolumeClaim:
            claimName: sqctrl-pvc-upload
